added ability to go forward and back on drinks from API that are returned

--- a/class26-materials/class26-materials/objects-shots/css/style.css
+++ b/class26-materials/class26-materials/objects-shots/css/style.css
@@ -13,9 +13,15 @@
 img{
   display: block;
   margin: 0 auto;
+  height: 200px;
+  width: auto;
 }
 
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
+.hidden {
+  display: none;
+}
