--- a/class27-materials/class27-materials/card-game/css/style.css
+++ b/class27-materials/class27-materials/card-game/css/style.css
@@ -12,8 +12,12 @@
 /*******************************************/
 img{
   display: block;
-  margin: 0 auto;
-  width: 50px;
+  margin: 0;
+  width: 200px;
+}
+
+.hidden {
+  display: none;
 }
 
 
