--- a/class27-materials/class27-materials/starWars-api/css/style.css
+++ b/class27-materials/class27-materials/starWars-api/css/style.css
@@ -5,13 +5,22 @@
 /* Box Model Hack */
 *{
   box-sizing: border-box;
+  font-family: 'Orbitron', sans-serif;
+  
 }
+
+.sr-only {
+  display: hidden;
+}
+
+
 
 /******************************************
 /* LAYOUT
 /*******************************************/
 body{
   text-align: center;
+  
 }
 
 
@@ -26,28 +35,32 @@ body{
 }
 
 h1 {
-  margin-top: 30px;
-  color: white;
+  margin-top: 5%;
+  font-size: 50px;
+  color: rgb(255, 255, 255);
 }
 
-button {
+#charRandomize {
   
   background-image: linear-gradient(45deg,rgb(9, 180, 232), rgb(196, 35, 11));
   padding: 7px 15px;
+  margin-bottom: 10px;
   background-size: 100% 400%;
   background-position: 0% 0%;
-  transition: .5s;
+  transition: .2s;
   cursor: pointer;
 }
 
-button:hover {
-  background-position: 0% 100%
+#charRandomize:hover {
+  background-position: 0% 90%
 }
 
 
 
 .card {
-  width: 50%;
+
+  width: 75%;
+  height: 60%;
   text-align: center;
   background: linear-gradient(45deg,rgb(9, 180, 232), rgb(196, 35, 11));
   margin: auto;
@@ -55,12 +68,58 @@ button:hover {
   
 }
 
-.card span{
-  display: block;
-  padding-bottom: 10%;
-  width: 100%;
-  border-top: 1px solid black
+.card:hover {
+  
 }
+
+#cardName {
+  display: flex;
+  height: 65%;
+  color: rgb(0, 0, 0);
+  background-image: url(../img/stars.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  
+}
+
+#cardName h2 {
+  color: yellow;
+  font-size: 70px;
+}
+
+#charInfo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  height: fit-content;
+  background: linear-gradient(45deg rgb(9, 180, 232), rgb(196, 35, 11));
+}
+
+.card .infocontainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  padding-top: 30px;
+  height: fit-content;
+  
+  
+}
+
+.infocontainer ul {
+  list-style: none;
+  text-align: center;
+  padding: 20px 0 0 0;
+}
+
+
+
+
 
 /******************************************
 /* ADDITIONAL STYLES
