--- a/class27-materials/class27-materials/starWars-api/css/style.css
+++ b/class27-materials/class27-materials/starWars-api/css/style.css
@@ -62,7 +62,6 @@ h1 {
   width: 75%;
   height: 60%;
   text-align: center;
-  background: linear-gradient(45deg,rgb(9, 180, 232), rgb(196, 35, 11));
   margin: auto;
   
   
@@ -74,7 +73,8 @@ h1 {
 
 #cardName {
   display: flex;
-  height: 65%;
+  min-height: 65%;
+  max-height: 100%;
   color: rgb(0, 0, 0);
   background-image: url(../img/stars.jpg);
   background-size: cover;
@@ -96,7 +96,7 @@ h1 {
   justify-content: space-around;
   flex-wrap: wrap;
   height: fit-content;
-  background: linear-gradient(45deg rgb(9, 180, 232), rgb(196, 35, 11));
+  background: linear-gradient(45deg, rgb(9, 180, 232), rgb(196, 35, 11));
 }
 
 .card .infocontainer{
@@ -106,7 +106,7 @@ h1 {
   align-items: center;
   padding: 0;
   padding-top: 30px;
-  height: fit-content;
+  min-height: fit-content;
   
   
 }
@@ -115,6 +115,7 @@ h1 {
   list-style: none;
   text-align: center;
   padding: 20px 0 0 0;
+  height: 100%;
 }
 
 
