--- a/class29-materials/class29-materials/rainbow-badge-pokedex/css/style.css
+++ b/class29-materials/class29-materials/rainbow-badge-pokedex/css/style.css
@@ -115,6 +115,10 @@ figure {
     font-size: 3rem;
   }
 
+  input{
+    font-size: 16px;
+  }
+
   #searchContainer {
     display: flex;
     flex-direction: column;
